myteo/test/parser/ast/block/unclosed_block.exp
ERROR: test/parser/ast/block/unclosed_block.myte:3:12 Unexpected <EOF>
 3 | fun main() {
   |             ^